PR style changes